<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BonVoyageTravelApp</string>
    <string name="menu_dawson">Dawson</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <!-- Start tipping calculator -->
    <string name="tip_title">Tip Calculator</string>
    <string name="bill_total_text">Bill Total:</string>
    <string name="tip_percentages">Tip Percentage:</string>
    <string name="tip_ten">10%</string>
    <string name="tip_fifteen">15%</string>
    <string name="tip_twenty">20%</string>
    <string name="tip_people">Number of people to split the bill:</string>
    <string name="spinner_prompt">How many people will pay the bill?</string>
    <string name="calculate_button">Calculate Tip</string>
    <string name="tip_total_text">Tip total:</string>
    <string name="final_price_text">Final price:</string>
    <string name="each_person_text">Each person will pay:</string>
    <string name="defaultPrice">0.0</string>
    <!-- End tipping calculator -->


    <!-- Start about activity -->
    <string name="nameDialogTitle">Set your information!</string>
    <string name="nameDialogInstruction">Please enter the necessary information to configure the application :)</string>
    <string name="okBtn">OK</string>
    <string name="nameProblem">Every field must be filled in. They can be changed from the menu</string>
    <string name="aboutTitle">CREDITS</string>
    <string name="aboutSchoolText"><u>Institution:</u></string>
    <string name="aboutSchoolLink"><u>Dawson College</u></string>
    <string name="aboutCourseText"><u>Project\'s Course Number:</u></string>
    <string name="aboutCourseLink"><u>420-518-DW</u></string>
    <string name="aboutAuthorsText"><u>Made By (Images launch our wiki):</u></string>
    <string name="aboutAuthor1">Annie So</string>
    <string name="aboutAuthor2">Christopher Dufort</string>
    <string name="aboutAuthor3">Irina Patrocinio Frazao</string>
    <string name="comingSoon">This feature will be coming soon!</string>
    <string name="title_activity_unit_conversion">Unit Conversion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- End about activity -->


    <!-- Start Unit Conversion -->
    <string name="radio_distance">Distance</string>
    <string name="radio_mass">Mass</string>
    <string name="radio_volume">Volume</string>
    <string name="value">Value:</string>
    <string name="from">From:</string>
    <string name="convert">Convert</string>
    <string name="to">To:</string>
    <string name="valueToConvertHint">Value you wish to convert</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
    <string name="distance_spinner_prompt">Select a Unit of Measurement.</string>
    <!-- End Unit Conversion -->


    <!-- Start weather Check -->
    <string name="weatherCheckTitle"><u>Weather Forecast</u></string>
    <string name="general"><u>General Weather:</u></string>
    <string name="description"><u>Detailed Description:</u></string>
    <string name="temperature"><u>Temperature:</u></string>
    <string name="min_temperature"><u>Minimum Temperature:</u></string>
    <string name="max_temperature"><u>Maximum Temperature:</u></string>
    <string name="humidity"><u>Humidity:</u></string>
    <string name="pressure"><u>Pressure:</u></string>
    <string name="wind"><u>Wind Speed:</u></string>
    <!-- End weather Check -->


    <!-- Start Manage Trips -->
    <string name="title_activity_manage_trips">Manage Trips</string>
    <string name="all_trips_for">All Trips For:</string>
    <string name="sync_trips">Sync Trips</string>
    <string name="trip_name">Name</string>
    <string name="trip_description">Description</string>
    <!-- End Manage Trips -->


    <!-- Start Itinerary -->
    <string name="title_activity_itinerary">Itinerary</string>
    <string name="create_itinerary">Add a new Itinerary</string>
    <string name="trip_itinerary_for">Trip Itinerary For:</string>
    <string name="current_itinerary_title">Current Trip Budgeted Expenses:</string>
    <string name="manage_itinerary_title"> Manage Bugeted Expenses for trip:</string>
    <string name="today_itinerary_title"> Bugeted Expenses for today!:</string>
    <string name="expense_name">Name</string>
    <string name="expense_description">Description</string>
    <string name="expense_amount">Budgeted Amount</string>
    <!-- End Itinerary -->


    <!-- Start Budgeted Details -->
    <string name="itinerary_details_title">Details on the Budgeted Expense:</string>
    <string name="itinerary_today_title">Todays Agenda:</string>
    <string name="itinerary_details_associated_title">The Associated Actual Expense:</string>
    <string name="itinerary_location">Location:</string>
    <string name="itinerary_arrival_date">Arrival Date:</string>
    <string name="itinerary_arrival_time">Arrival Time:</string>
    <string name="itinerary_departure_date">Departure Date:</string>
    <string name="itinerary_departure_time">Departure Time:</string>
    <string name="itinerary_amount">Amount:</string>
    <string name="itinerary_description">Description:</string>
    <string name="itinerary_category">Category:</string>
    <string name="itinerary_category_prompt">Choose a category</string>
    <string name="itinerary_location_prompt">Choose a location</string>
    <string name="itinerary_supplier">Supplier:</string>
    <string name="itinerary_address">Address:</string>
    <string name="itinerary_stars">Number of Stars:</string>
    <string name="itinerary_create_actual">Create Actual Expense</string>
    <string name="itinerary_edit_budgeted">Edit Budgeted Expense</string>
    <string name="itinerary_edit_actual">Edit Budgeted Expense</string>
    <string name="itinerary_create_budgeted">Create New Budgeted</string>
    <string name="itinerary_edit_save">Save Changes</string>
    <string name="itinerary_delete">Delete</string>
    <!-- end budgeted details -->


    <!-- Start Currency Conversion -->
    <string name="currency_title">Currency Conversion</string>
    <string name="equals">=</string>
    <!-- End Currency Conversion -->

    <string name="title_activity_itinerary_details">Details of Itinerary</string>

    <!-- Start Settings -->
    <string name="settings_name">Name:</string>
    <string name="settings_email">Website Email:</string>
    <string name="settings_password">Website Password:</string>
    <string name="settings_home_country_code">Home Country Code:</string>
    <string name="settings_destination_country_code">Destination Country Code: </string>
    <!-- End Settings -->

</resources>