<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.bonvoyagetravelapp.MainActivity" >

    <TableRow
        android:id="@+id/tipTitleRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10sp" >

        <TextView
            android:id="@+id/tipCalculatorHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tip_title"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/billTotalRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp" >

        <TextView
            android:id="@+id/billTotalText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:text="@string/bill_total_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/billTotalAmount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="end"
            android:inputType="numberDecimal" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/percentagesRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp" >

        <TextView
            android:id="@+id/percentagesText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:text="@string/tip_percentages"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tip_ten" />

            <RadioButton
                android:id="@+id/radio_fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tip_fifteen" />

            <RadioButton
                android:id="@+id/radio_twenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tip_twenty" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/numPeopleRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp" >

        <TextView
            android:id="@+id/numberOfPeopleText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:text="@string/tip_people"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/peopleSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_choices"
            android:gravity="end"
            android:prompt="@string/spinner_prompt" />
    </TableRow>

    <TableRow
        android:id="@+id/calculateBtnRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="30sp" >

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="calculateTip"
            android:text="@string/calculate_button" />
    </TableRow>

    <TableRow
        android:id="@+id/tipTotalRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp" >

        <TextView
            android:id="@+id/tipTotalText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:text="@string/tip_total_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tipTotalAmount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="end"
            android:text="@string/defaultPrice"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/finalPriceRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp" >

        <TextView
            android:id="@+id/finalPriceText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:text="@string/final_price_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/finalPriceAmount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="end"
            android:text="@string/defaultPrice"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/eachPersonRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp" >

        <TextView
            android:id="@+id/eachPersonText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:text="@string/each_person_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eachPersonAmount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="end"
            android:text="@string/defaultPrice"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/billErrorRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/billErrorText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>