<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.bonvoyagetravelapp.ManageTripsActivity" >
    
    <LinearLayout
        android:id="@+id/manage_trip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	       	android:textSize="40sp"
	        android:text="@string/all_trips_for" />
        
        <TextView
            android:id="@+id/all_trips_name"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:textSize="50sp"
	        android:text="" />    
    </LinearLayout>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="syncTrips"
        android:text="@string/sync_trips" >
    </Button>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
      
	   <TextView
	       	android:layout_width="0dp"
		    android:layout_weight="1"
	        android:layout_height="match_parent" 
	        android:textSize="15sp"
	        android:padding="10sp"
	        android:textStyle="bold"
	        android:text="@string/trip_name" >
	    </TextView>
	    
	    <TextView
	       	android:layout_width="0dp"
		    android:layout_weight="2"
	        android:layout_height="match_parent" 
	        android:textSize="15sp"
	        android:padding="10sp" 
	        android:textStyle="bold"
	        android:text="@string/trip_description" >
	    </TextView>
	    
	</LinearLayout>
    
    <ListView
        android:id="@+id/listViewAllTrips"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" >
    </ListView>

</LinearLayout>