<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.bonvoyagetravelapp.MainActivity" >

    <TextView
        android:id="@+id/weatherTitle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="start"
        android:padding="20sp"
        android:text="@string/weatherCheckTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/locationRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/generalDescriptionRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/generalDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/general"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/generalDescriptionValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/detailedDescriptionRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detailedDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailedDescriptionValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/temperatureRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/temperatureText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/temperature"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/temperatureMinRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/temperatureMinText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/min_temperature"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperatureMinValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/temperatureMaxRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/temperatureMaxText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/max_temperature"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperatureMaxValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/humidityRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/humidityText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/humidity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/pressureRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pressureText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/pressure"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/speedRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/speedText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:text="@string/wind"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="20sp"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>