<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.bonvoyagetravelapp.MainActivity"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/aboutTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15sp"/>
    
    <LinearLayout
        android:id="@+id/aboutSchoolRow"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        
    <TextView 
        android:id="@+id/aboutSchoolText"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/aboutSchoolText"
        android:textSize="10sp"
        android:textStyle="bold"
        android:padding="15sp"/>
    
    <TextView 
        android:id="@+id/aboutSchoolLink"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/aboutSchoolLink"
        android:textSize="10sp"
        android:padding="15sp"
        android:onClick="dawsonWebPage"
        android:textColor="@color/blue"/>
        
    </LinearLayout>
    
   
</LinearLayout>

    