<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.bonvoyagetravelapp.MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp"
            android:text="@string/settings_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp"
            android:text="@string/settings_email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp"
            android:text="@string/settings_password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp"
            android:text="@string/settings_home_country_code"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/homeInput"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp"
            android:text="@string/settings_destination_country_code"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/destinationInput"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:padding="15sp">
        </EditText>
    </LinearLayout>

</LinearLayout>